# Cobalt

./: .gitignore  CMakeLists.txt  HCFG.h  Makefile  README.md
test/: test00.cb
